remove redundant color naming Black100

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="cardinal_red_dark">#FF820000</color>
     <color name="cardinal_red_light">#FFB83A4B</color>
     <color name="cool_grey">#FF53565A</color>
-    <color name="black_100">#FF2E2D29</color>
+    <color name="black">#FF2E2D29</color>
     <color name="black_80">#FF43423E</color>
     <color name="black_60">#FF767674</color>
     <color name="black_40">#FFABABA9</color>
