set Theme programmatically
Signed-off-by: Basler182 <showdialog@web.de>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
 
     <style name="Theme.Spezi" parent="android:Theme.Material.Light.NoActionBar" />
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Spezi.Content" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorSurface">@color/white</item>
     </style>
 </resources>
