--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,4 +9,7 @@
 
     <style name="Theme.Spezi" parent="android:Theme.Material.Light.NoActionBar" />
 
+    <style name="Theme.Spezi.Content" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorSurface">@color/white</item>
+    </style>
 </resources>
