--- a/contact/src/main/res/values/contact_strings.xml
+++ b/contact/src/main/res/values/contact_strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="contact_profile_picture">Profile Picture</string>
     <string name="contact_address">Address</string>
+    <string name="contact_email">Email</string>
+    <string name="contact_text">Text</string>
+    <string name="contact_call">Call</string>
+    <string name="contact_website">Website</string>
 </resources>
